removed overflows dealing which caused many bugs

--- a/style.css
+++ b/style.css
@@ -1,7 +1,3 @@
-* {
-    overflow: hidden;
-}
-
 body {
     font-family: 'roboto', sans-serif;
   }
